--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 
 @font-face {
   font-family: Minhafonte;
-  src: url('C:/Users/Pedro/Desktop/Email-sign-generator-canvas/Email-sign-generator-canvas/assets/font/Montserrat-Bold.ttf.ttf');
+  src: url('https://github.com/PdrNTC/gerador-assinatura/tree/main/assets/font/Montserrat-Bold.ttf.ttf');
   font-weight: normal;
 }
 
