--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 
 @font-face {
-  font-family: Minhafonte, verdana;
+  font-family: Minhafonte;
   src: url('https://github.com/PdrNTC/gerador-assinatura/blob/main/assets/font/Montserrat-Bold.ttf.ttf');
   font-weight: normal;
 }
