--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 
 @font-face {
   font-family: Minhafonte;
-  src: url('https://github.com/PdrNTC/gerador-assinatura/blob/main/assets/font/Montserrat-Bold.ttf');
+  src: url('https://github.com/PdrNTC/gerador-assinatura/blob/main/assets/font/MsHand.ttf.ttf');
   font-weight: normal;
 }
 
