--- a/index.css
+++ b/index.css
@@ -6,8 +6,8 @@
 }
 
 body {
-  font-family: Minhafonte;
-  background-color: #CCCC;
+  font-family: Verdana;
+  background-color: #ffff;
 }
 /*
 body {
