--- a/index.css
+++ b/index.css
@@ -1,4 +1,3 @@
-
 @font-face {
   font-family: Minhafonte;
   src: url('https://github.com/PdrNTC/gerador-assinatura/blob/main/assets/font/MsHand.ttf.ttf');
@@ -6,8 +5,8 @@
 }
 
 body {
-  font-family: Verdana;
-  background-color: #ffff;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #ededed;
 }
 /*
 body {
