--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Minhafonte, Arial, Helvetica, sans-serif;
   background-color: #ededed;
 }
 /*
