--- a/index.css
+++ b/index.css
@@ -1,12 +1,17 @@
+/*
 @font-face {
   font-family: Minhafonte;
   src: url('https://github.com/PdrNTC/gerador-assinatura/blob/main/assets/font/MsHand.ttf.ttf');
   font-weight: normal;
 }
+*/
 
 body {
+  font-family: 'Montserrat', sans-serif;
+  /*
   font-family: Minhafonte, Arial, Helvetica, sans-serif;
   background-color: #ededed;
+  */
 }
 /*
 body {
