--- a/index.css
+++ b/index.css
@@ -1,10 +1,9 @@
-/*
+
 @font-face {
   font-family: Minhafonte;
-  src: url('https://github.com/PdrNTC/gerador-assinatura/blob/main/assets/font/MsHand.ttf.ttf');
+  src: url('https://github.com/PdrNTC/gerador-assinatura/blob/main/assets/font/Montserrat-Bold.ttf.ttf.ttf');
   font-weight: normal;
 }
-*/
 
 body {
   font-family: 'Montserrat', sans-serif;
