--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@
 
 body {
   font-family: 'Montserrat', sans-serif;
+  font-weight: normal;
   /*
   font-family: Minhafonte, Arial, Helvetica, sans-serif;
   background-color: #ededed;
