--- a/index.css
+++ b/index.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+
 @font-face {
   font-family: Minhafonte;
   src: url('https://github.com/PdrNTC/gerador-assinatura/blob/main/assets/font/Montserrat-Bold.ttf');
   font-weight: normal;
+  font-display: swap;
 }
 
 body {
